feat: list of attributes
