# Modules/Product/Routes/api.php
@@ -20,6 +20,11 @@ Route::controller(ProductController::class)
     {
         Route::get('/', 'index');
         Route::get('/{product}', 'show');
+        Route::get('/list/attributes', 'getAttributes');
+        Route::get('/list/colors', 'getColors');
+        Route::get('/list/materials', 'getMaterials');
+        Route::get('/list/sizes', 'getSizes');
+
 //        Route::post('/', 'create');
 //        Route::put('/{product}', 'update');
 //        Route::patch('/{product}', 'update');
